- changed some incompatible java 8 syntax - removed module-info.java