@@ -8,11 +8,12 @@ import org.hzt.utils.test.Generator;
 import org.hzt.utils.test.model.PaintingAuction;
 import org.hzt.utils.tuples.Pair;
 import org.jetbrains.annotations.NotNull;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
-import java.util.List;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Set;
 
@@ -71,12 +72,12 @@ class TransformableTest {
 
     @Test
     void testTransformableSequence() {
-        final var integers = TransformableSequence.of(List.of(1, 2, 3, 4, 3, 5))
+        final Set<Integer> integers = TransformableSequence.of(Arrays.asList(1, 2, 3, 4, 3, 5))
                 .alsoWhen(s -> s.count() > 10, s -> s.forEach(System.out::println))
                 .get()
                 .toSet();
 
-        assertEquals(Set.of(1,2,3,4,5), integers);
+        assertEquals(new HashSet<>(Arrays.asList(1,2,3,4,5)), integers);
     }
 
     interface TransformableSequence<T> extends Transformable<TransformableSequence<T>>, Sequence<T> {
