@@ -6,14 +6,19 @@ import javafx.beans.property.SimpleIntegerProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 import javafx.collections.MapChangeListener;
+import javafx.collections.ObservableFloatArray;
+import javafx.collections.ObservableIntegerArray;
+import javafx.collections.ObservableList;
+import javafx.collections.ObservableMap;
+import javafx.collections.ObservableSet;
 import javafx.collections.SetChangeListener;
+import org.hzt.utils.collections.MapX;
 import org.hzt.utils.sequences.primitives.DoubleSequence;
 import org.hzt.utils.sequences.primitives.IntSequence;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
@@ -25,9 +30,9 @@ class FxCollectorsTest {
 
     @Test
     void testCollectToObservableList() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var strings = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableList<String> strings = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .mapToObj(Integer::toString)
@@ -40,16 +45,16 @@ class FxCollectorsTest {
 
         assertAll(
                 () -> assertTrue(changeListenerFired.get()),
-                () -> assertEquals(List.of("2", "4", "4", "6", "Kaas"), strings),
+                () -> assertEquals(Arrays.asList("2", "4", "4", "6", "Kaas"), strings),
                 () -> assertEquals(5, size.get())
         );
     }
 
     @Test
     void testCollectToObservableSet() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var strings = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableSet<String> strings = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .mapToObj(Integer::toString)
@@ -62,16 +67,16 @@ class FxCollectorsTest {
 
         assertAll(
                 () -> assertTrue(changeListenerFired.get()),
-                () -> assertEquals(Set.of("2", "4", "6", "Kaas"), strings),
+                () -> assertEquals(new HashSet<>(Arrays.asList("2", "4", "6", "Kaas")), strings),
                 () -> assertEquals(4, size.get())
         );
     }
 
     @Test
     void testCollectToObservableMap() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var map = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableMap<Integer, String> map = IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .distinct()
@@ -83,18 +88,21 @@ class FxCollectorsTest {
         map.put(5, "Kaas");
         size.bind(Bindings.size(map));
 
+        final MapX<Integer, String> expectedContent = MapX.of(2, "2", 4, "4", 6, "6", 5, "Kaas");
+
         assertAll(
                 () -> assertTrue(changeListenerFired.get()),
-                () -> assertEquals(Map.of(2, "2", 4, "4", 6, "6", 5, "Kaas"), map),
+                () -> assertTrue(expectedContent.containsAll(map.entrySet())),
+                () -> assertTrue(map.entrySet().containsAll(map.entrySet())),
                 () -> assertEquals(4, size.get())
         );
     }
 
     @Test
     void testCollectToObservableFloatArray() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var floatArray = DoubleSequence.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableFloatArray floatArray = DoubleSequence.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .distinct()
@@ -111,9 +119,9 @@ class FxCollectorsTest {
 
     @Test
     void testCollectToObservableIntArray() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var intArray = IntSequence.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableIntegerArray intArray = IntSequence.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .collect(toObservableIntArray());
@@ -121,7 +129,7 @@ class FxCollectorsTest {
         intArray.addListener((observableArray, sizeChanged, from, to) -> changeListenerFired.set(true));
         intArray.set(0, 3);
 
-        final var expected = new int[]{3, 4, 4, 6};
+        final int[] expected = new int[]{3, 4, 4, 6};
 
         assertAll(
                 () -> assertTrue(changeListenerFired.get()),
@@ -131,9 +139,9 @@ class FxCollectorsTest {
 
     @Test
     void testStreamCollectToObservableIntArray() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var intArray = FXCollections
+        final ObservableIntegerArray intArray = FXCollections
                 .observableIntegerArray(IntStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                         .sorted()
                         .filter(i -> i % 2 == 0)
@@ -142,7 +150,7 @@ class FxCollectorsTest {
         intArray.addListener((observableArray, sizeChanged, from, to) -> changeListenerFired.set(true));
         intArray.set(0, 3);
 
-        final var expected = new int[]{3, 4, 4, 6};
+        final int[] expected = new int[]{3, 4, 4, 6};
 
         assertAll(
                 () -> assertTrue(changeListenerFired.get()),
@@ -152,9 +160,9 @@ class FxCollectorsTest {
 
     @Test
     void testCollectBoxedTypeToObservableFloatArray() {
-        final var changeListenerFired = new AtomicBoolean(false);
+        final AtomicBoolean changeListenerFired = new AtomicBoolean(false);
 
-        final var floatArray = DoubleStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
+        final ObservableFloatArray floatArray = DoubleStream.of(1, 2, 3, 4, 5, 6, 7, 4, 5, 3)
                 .sorted()
                 .filter(i -> i % 2 == 0)
                 .distinct()
